--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "dapp-token-sale",
+  "name": "Pavelium-token-sale",
   "version": "1.0.0",
-  "description": "Dapp Token Sale ICO",
+  "description": "Pavelium Token Sale ICO",
   "main": "truffle.js",
   "directories": {
     "test": "test"
@@ -9,7 +9,7 @@
   "scripts": {
     "dev": "lite-server"
   },
-  "author": "Gregory",
+  "author": "Pablo Rotem",
   "license": "ISC",
   "devDependencies": {
     "lite-server": "^2.3.0"
